# indeed-plugin

./: .gitignore  README.md  config.example.yaml  indeed-plugin.code-workspace  package.json  pyproject.toml  requirements.txt
data/: base_resume.md
extension/: background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js
extension/lib/: base-cover-letter.js  base-resume.js  cover-letter-format.js  documents.js  naming.js  pdf-export.js  resume-format.js  word-export.js
extension/styles/: panel.css
src/indeed_assistant/: __init__.py  cli.py  config.py  documents.py  indeed_browser.py  matcher.py
