[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "indeed-job-assistant"
version = "0.1.0"
description = "Tailored resume/cover letter generation and assisted Indeed job applications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "openai>=1.0.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
]

[project.scripts]
indeed-assistant = "indeed_assistant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
